--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,33 @@
 
 /* Your CSS Code here. */
+ body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+             body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            /* display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f3f3f3;
+            height: 100vh; */
+        }
+        .questions {
+            background-color: #f8fffe;
+            height: 50px;
+            margin-top: 20px;
+            padding: 15px;
+            max-width: 600px;
+            border-left: 8px solid green;
+        }
+        }
+        .questions {
+            background-color: #f8fffe;
+            height: 50px;
+            margin-top: 20px;
+            padding: 15px;
+            max-width: 600px;
+            border-left: 8px solid green;
+        }
